need to figure out getAccount API endpoint issue
