# openapi.yaml
@@ -43,38 +43,38 @@ paths:
     parameters:
       - $ref: "#/components/parameters/PathAccountId"
     x-controller: accounts
-    get:
-      x-operation: getAccount
-      tags:
-        - Accounts
-      security:
-        - cookieAuth: []
-      summary: Get an account
-      parameters:
-        - name: username
-          in: query
-          schema:
-            type: string
-        - name: password
-          in: query
-          schema:
-            type: string
-            format: password
-        - name: isManager
-          in: query
-          schema:
-            type: boolean
-      responses:
-        200:
-          description: Success
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Account"
-        400:
-          description: Invalid request.
-        401:
-          description: Not authenticated.
+  get:
+    x-operation: getAccount
+    tags:
+      - Accounts
+    security:
+      - cookieAuth: []
+    summary: Get an account
+    parameters:
+      - name: username
+        in: query
+        schema:
+          type: string
+      - name: password
+        in: query
+        schema:
+          type: string
+          format: password
+      - name: isManager
+        in: query
+        schema:
+          type: boolean
+    responses:
+      200:
+        description: Success
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Account"
+      400:
+        description: Invalid request.
+      401:
+        description: Not authenticated.
   /accounts/{username}:
     parameters:
       - $ref: "#/components/parameters/PathUsername"
@@ -122,7 +122,11 @@ paths:
               isManager: false
       responses:
         200:
-          description: Account updated.
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Account"
         404:
           description: Account not found.
         401:
